examples/failing/OverlappingReExport/B.purs
module B where
x = false
